# kamal-python-yt-dlp

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py  youtube_api.py  ytdlp_utils.py
config/: deploy.yml
