[project]
name = "kamal-python"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Viktor Andersen", email = "vikfand@gmail.com"},
]
dependencies = [
    "fastapi>=0.112.2",
    "uvicorn[standard]>=0.30.6",
    "yt-dlp>=2024.8.6",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[tool.pdm.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
